gfx/thebes/gfxCoreTextShaper.cpp
@@ -81,7 +81,8 @@ IsBuggyIndicScript(unicode::Script aScript)
 {
     return aScript == unicode::Script::BENGALI ||
            aScript == unicode::Script::KANNADA ||
-           aScript == unicode::Script::ORIYA;
+           aScript == unicode::Script::ORIYA ||
+           aScript == unicode::Script::KHMER;
 }
 
 bool
@@ -119,7 +120,7 @@ gfxCoreTextShaper::ShapeText(DrawTarget      *aDrawTarget,
         // for "split vowels" to work in at least Bengali and Kannada fonts.
         // Affected fonts include Bangla MN, Bangla Sangam MN, Kannada MN,
         // Kannada Sangam MN. See bugs 686225, 728557, 953231, 1145515.
-        // Also applies to Oriya fonts, see bug 1370927.
+        // Also applies to Oriya and Khmer, see bug 1370927 and bug 1403166.
         tempCTFont =
             CreateCTFontWithFeatures(::CTFontGetSize(mCTFont),
                                      aShapedText->DisableLigatures()
